Issue #3397737: Gin's horizontal dropdown menu appears behind CKEditor 5's sticky header #3385497 Followup

--- a/styles/components/ckeditor5.scss
+++ b/styles/components/ckeditor5.scss
@@ -123,4 +123,9 @@
     color: var(--ck-color-image-caption-text);
     background: var(--ck-color-image-caption-background);
   }
+
+  .ck.ck.ck-balloon-panel.ck-powered-by-balloon {
+    z-index: 2;
+    transform: translateY(-13px);
+  }
 }
